[tool.poetry]
name = "collection-query"
version = "0.1.0"
description = "Query through your collections like through database"
authors = ["Ivan R <vanyaryanichev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cprofilev = "^1.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
